--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -4,5 +4,9 @@
     <string name="app_name">Shareburst</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
+    <string name="title_activity_result">ResultActivity</string>
+    
+    <string name="email_address">eeeemail</string>
+    <string name="button_submit">Submit!</string>
 
 </resources>
