--- a/app/res/values/strings.xml
+++ b/app/res/values/strings.xml
@@ -9,6 +9,7 @@
     <string name="what_to_do">What would you like to do?</string>
     <string name="action_settings">Settings</string>
     <string name="action_logout">Logout</string>
+    <string name="action_edit">Edit</string>
     <string name="action_refresh">Refresh</string>
     <string name="title_activity_result">ResultActivity</string>
     <string name="button_submit">Submit!</string>
